# crystal

./: .gitignore  Makefile  README.md  app.py  go.mod  main.go  pyproject.toml
internal/applicaton/: main.go
internal/workflow/: base.go  events.go  metrics.go  nodes.go
scripts/: temp.fish
src/crystal/: __init__.py
