[project]
name = "crystal"
version = "0.1.0"
description = ""
authors = [
    {name = "Jim Fitzpatrick",email = "jfitzpat@redhat.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.46.0,<2.0.0)",
    "graphviz (>=0.21,<0.22)",
    "requests (>=2.32.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "crystal", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
